chore: rename App to Main and other misc documentation

--- a/task01/pom.xml
+++ b/task01/pom.xml
@@ -31,13 +31,13 @@
       <!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jar-plugin</artifactId>
-          <version>3.0.2</version>
+          <version>3.1.0</version>
           <configuration>
             <archive>
               <manifest>
-                <addClasspath>true</addClasspath>
-                <mainClass>sdf.task01.App</mainClass>
+                <mainClass>sdf.task01.Main</mainClass>
               </manifest>
             </archive>
           </configuration>
